--- a/happytime/public/index.html
+++ b/happytime/public/index.html
@@ -19,7 +19,7 @@
     />
     <!-- MUI -->
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
