--- a/happytime/public/index.html
+++ b/happytime/public/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <!-- <script
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      type="text/javascript"
+    ></script> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -50,4 +54,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="/src/route.js"></script>
 </html>
